# FRCNN_play

./: .gitignore  CMakeLists.txt  README.md  caffe
examples/: CMakeLists.txt
examples/FRCNN/: convert_model.py  demo_frcnn.sh  demo_frcnn_api.cpp  demo_rpn.cpp
examples/FRCNN/config/: voc_config.json  voc_config.json.bak
examples/FRCNN/zf/: train_frcnn.sh
labels/: class_index.txt  voc2007.trainval.txt
src/api/FRCNN/: CMakeLists.txt
tools/: 0_createXml.py  1_convert_xml2FRCNNTrainDatasets.py
zf/: demo_frcnn.sh  solver.prototxt  test.prototxt  test_frcnn.sh  train_frcnn.sh  train_val.prototxt
zf_rpn/: demo_rpn.sh  solver.prototxt  test_rpn.sh  train_rpn.sh  train_val.prototxt  voc_config.json
